# twin-polyak

./: .gitignore  main.ipynb
experiments/: 00_script.py  base_module.py  binary-covtype.ipynb  binary_cross_entropy.ipynb  custom_logger.py  exp_CIFAR10_DenseNet121.py  exp_a1a.py  exp_colon-cancer.py  exp_mushrooms.py  exp_w1a.py  experiments_logistic_regression.ipynb  least_square.ipynb  least_squares.ipynb  libsvm_binary_classifier.py  libsvm_utils.py  logistic_regression.ipynb  loss_functions.py  matrix-completion.ipynb  methods.py  multi-class-usps.ipynb  multi-label-yeast.ipynb  multi-label.ipynb  pt_RoBERTa_UCC.ipynb  pt_methods.py  pt_nn.ipynb  pt_run_optimizer.py  pt_twin_polyak.py  quadratic_synthetic.ipynb  regression-libsvm.ipynb  run_CIFAR10.py  run_CIFAR100_ResNet34.py  run_MNIST.py  run_MNISTnoisy.py  run_SVHN.py  run_USPS.py  run_abalone_scale.py  run_covtype_binary.py  run_cpusmall.py  run_logreg_libsvm.py  run_lstsq_libsvm.py  (+5 more)
experiments/models/: densenet.py  lenet5.py  mlp.py  resnet.py  simplecnn.py  wideresnet.py
experiments/npkit/: pyproject.toml
experiments/npkit/npkit/: data.py  loss.py  metrics.py
experiments/npkit/npkit/optim/: Adagrad.py  Adam.py  DecSPS.py  Momo.py  SGD.py  SLS.py  SPS.py  STP.py  models.py  optimizer.py
experiments/npkit/npkit/trainer/: callback.py  csv_callback.py  logger.py  trainer.py
experiments/npkit/tests/: test_data.py  test_loss.py
experiments/solver/: a1a_sol.pkl  colon-cancer_sol.pkl  diabetes_scale_sol.pkl  mushrooms_sol.pkl
