[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npkit"
version = "0.0.1"
description = "A small utility package for AI research (optimization, dataloaders, etc.)"
authors = [
    { name = "Farshed Abdukhakimov" }
]
license = { text = "MIT" }
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]